syntax = "proto3";

package admin.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/fzf-labs/ai-boilerplate-backend/api/admin/v1;v1";

//短信日志
service SmsLog {
  //短信日志-单条数据查询
  rpc GetSmsLogInfo(GetSmsLogInfoReq) returns (GetSmsLogInfoReply) {
    option (google.api.http) = {get: "/admin/v1/sms_log/info"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //短信日志-列表数据查询
  rpc GetSmsLogList(GetSmsLogListReq) returns (GetSmsLogListReply) {
    option (google.api.http) = {get: "/admin/v1/sms_log/list"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
}

//短信日志信息
message SmsLogInfo {
  string id = 1; // 编号
  string smsChannelId = 2; // 短信渠道编号
  string smsTemplateId = 3; // 模板编号
  string smsParamsContent = 4; // 短信参数内容
  string mobile = 5; // 手机号
  string userId = 6; // 用户id
  string sendStatus = 7; // 发送状态
  string sendTime = 8; // 发送时间
  string receiveStatus = 9; // 接收状态
  string receiveTime = 10; // 接收时间
  string APISendCode = 11; // 短信 API 发送结果的编码
  string APISendMsg = 12; // 短信 API 发送失败的提示
  string APIRequestID = 13; // 短信 API 发送返回的唯一请求 ID
  string APISerialNo = 14; // 短信 API 发送返回的序号
  string APIReceiveCode = 15; // API 接收结果的编码
  string APIReceiveMsg = 16; // API 接收结果的说明
  string createdAt = 17; // 创建时间
}

//请求-短信日志-单条数据查询
message GetSmsLogInfoReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };

  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // 编号
}

//响应-短信日志-单条数据查询
message GetSmsLogInfoReply {
  SmsLogInfo info = 1;
}

//请求-短信日志-列表数据查询
message GetSmsLogListReq {
  int32 page = 1; //页码
  int32 pageSize = 2; //页数
}

//响应-短信日志-列表数据查询
message GetSmsLogListReply {
  int32 total = 1; //总数
  repeated SmsLogInfo list = 2; // 列表数据
}
